--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container home">
         <ul class="nav">
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">E!BLOG</a>
@@ -24,6 +24,20 @@
             </li>
 
         </ul>
+
+        <div class="container overflow-hidden">
+            <div class="row gx-5">
+                <div class="col">
+                    <div class="p-3 border bg-light">Custom column padding</div>
+                </div>
+                <div class="col">
+                    <div class="p-3 border bg-light">Custom column padding</div>
+                </div>
+                <div class="col">
+                    <div class="p-3 border bg-light">Custom column padding</div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
