--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,34 +12,62 @@
 
 <body>
     <div class="container home">
-        <ul class="nav">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">E!BLOG</a>
-            </li>
-            <li class="nav-item one">
-                <a class="nav-link" href="#">Login</a>
-            </li>
-            <li class="nav-item one">
-                <a class="nav-link" href="#">Signup</a>
-            </li>
+        <div class="navbar">
+            <span>E!Blog</span>
+            <ul class="nav justify-content-end">
 
-        </ul>
+                <li class="nav-item">
+                    <a class=" nav-link " href="# ">Login</a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link " href="# ">Signup</a>
+                </li>
 
-        <div class="container overflow-hidden">
-            <div class="row gx-5">
-                <div class="col">
-                    <div class="p-3 border bg-light">Custom column padding</div>
+            </ul>
+        </div>
+        <div class="bor ">
+            <div class="container blog overflow-hidden ">
+                <div class="row gx-5 ">
+                    <div class="col display ">
+                        <div class="p-3 ">
+                            <img src="../static/images/beauty-removebg-preview.png " width="120 " alt=" ">
+                        </div>
+                    </div>
+                    <div class="col display ">
+                        <div class="p-3 ">
+                            <img src="../static/images/home-removebg-preview.png " width="160 " alt=" "></div>
+                    </div>
+                    <div class="col display ">
+                        <div class="p-3 ">
+                            <img src="../static/images/goodvi-removebg-preview.png " width="165 " alt=" "></div>
+                    </div>
                 </div>
-                <div class="col">
-                    <div class="p-3 border bg-light">Custom column padding</div>
-                </div>
-                <div class="col">
-                    <div class="p-3 border bg-light">Custom column padding</div>
+            </div>
+
+            <div class="container ">
+                <h1><span>BLOGS</span> from <br> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;ALL <span>TOPICS</span>
+                </h1>
+            </div>
+
+            <div class="container blog overflow-hidden ">
+                <div class="row gx-5 ">
+                    <div class="col display ">
+                        <div class="p-3 ">
+                            <img src="../static/images/fashion-removebg-preview.png " width="125 " alt=" "></div>
+                    </div>
+                    <div class="col display ">
+                        <div class="p-3 ">
+                            <img src="../static/images/lovr-removebg-preview.png " width="130 " alt=" "></div>
+                    </div>
+                    <div class="col display ">
+                        <div class="p-3 ">
+                            <img src="../static/images/hap-removebg-preview.png " width="140 " alt=" "></div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js " integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p " crossorigin="anonymous ">
     </script>
 </body>
 
