--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -48,6 +48,9 @@
                 <h1><span>BLOGS</span> from <br> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;ALL <span>TOPICS</span>
                 </h1>
             </div>
+            <div class="sign">
+                <p>Get Started</p>
+            </div>
 
             <div class="container blog overflow-hidden ">
                 <div class="row gx-5 ">
