--- a/app/static/style.css
+++ b/app/static/style.css
@@ -59,3 +59,50 @@ span {
     text-align: center;
     font-size: 24px;
 }
+
+.sign {
+    display: flex;
+    justify-content: space-around;
+    background-color: #192f40;
+    height: 100vh;
+}
+
+.content {
+    line-height: 5rem;
+    margin-top: 8rem;
+    font-size: 27px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 3em;
+    padding: 0 40px;
+    box-sizing: border-box;
+}
+
+.form-group {
+    position: relative;
+    border-bottom: 2px solid #adadad;
+    margin: 30px 0;
+}
+
+.form-group input {
+    width: 100%;
+    padding: 0 5px;
+    height: 40px;
+    font-size: 16px;
+    border: none;
+    background: none;
+    outline: none;
+}
+
+.content {
+    color: #F4B101;
+}
+
+.in {
+    margin-top: 3rem;
+    color: #F4B101;
+}
