--- a/app/static/style.css
+++ b/app/static/style.css
@@ -12,6 +12,10 @@
     font-family: 'Righteous', cursive;
 }
 
+.container {
+    background-color: #192f40;
+}
+
 .home {
     /* border: 15px solid#ff0000; */
     /* margin-top: 1rem; */
@@ -60,24 +64,18 @@ span {
     font-size: 24px;
 }
 
-.sign {
+.log {
     display: flex;
     justify-content: space-around;
     background-color: #192f40;
     height: 100vh;
 }
 
-.content {
-    line-height: 5rem;
-    margin-top: 8rem;
-    font-size: 27px;
-}
-
 form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 3em;
+    margin-bottom: 3rem;
     padding: 0 40px;
     box-sizing: border-box;
 }
@@ -100,6 +98,9 @@ form {
 
 .content {
     color: #F4B101;
+    line-height: 8rem;
+    margin-top: 8rem;
+    font-size: 27px;
 }
 
 .in {
