--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -49,7 +49,8 @@
                 </h1>
             </div>
             <div class="sign">
-                <p>Get Started</p>
+                <p> <a href="/signup">
+                        Get Started</a> </p>
             </div>
 
             <div class="container blog overflow-hidden ">
