--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,38 +1,54 @@
-<link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
+<!DOCTYPE html>
+<html lang="en">
 
-<div class="container sign">
-    <a href="/index"><button class="btn back btn-primary">Back</button></a>
-    <div class="panel">
-        <div class="content">
-            <h3>Lets Get you Started</h3>
-            <h3>It should only take a few minutes</h3>
-            <h3>Already signed in</h3>
-            <button class="btn transparent " id="signInBtn">Sign in</button>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="{{url_for('static', filename='/style.css')}}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>E!Blog</title>
+</head>
 
+<body>
+    <div class="container ">
+        <button class="btn back btn-primary"><a href="/index">Back</a></button>
+        <div class="log">
+
+            <div class="content">
+                <h3>Lets Get you Started</h3>
+                <h3>It should only take a few minutes</h3>
+                <h3>Already signed in</h3>
+                <button class="btn transparent " id="signInBtn">Sign in</button>
+
+
+            </div>
+            <div class="in">
+                <form method="POST">
+                    <h3 align-text="center">Sign Up</h3>
+                    <div class="form-group">
+                        <label for="email">Email Address</label>
+                        <input type="email" class="form-control" id="email" name="email" placeholder="Enter email" />
+                    </div>
+                    <div class="form-group">
+                        <label for="username">User Name</label>
+                        <input type="text" class="form-control" id="username" name="username" placeholder="Enter user name" />
+                    </div>
+
+                    <div class="form-group">
+                        <label for="password1">Password</label>
+                        <input type="password" class="form-control" id="password1" name="password1" placeholder="Enter password" />
+                    </div>
+                    <div class="form-group">
+                        <label for="password2">Password (Confirm)</label>
+                        <input type="password" class="form-control" id="password2" name="password2" placeholder="Confirm password" />
+                    </div>
+                    <br />
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
         </div>
     </div>
-    <div class="in">
-        <form method="POST">
-            <h3 align-text="center">Sign Up</h3>
-            <div class="form-group">
-                <label for="email">Email Address</label>
-                <input type="email" class="form-control" id="email" name="email" placeholder="Enter email" />
-            </div>
-            <div class="form-group">
-                <label for="username">User Name</label>
-                <input type="text" class="form-control" id="username" name="username" placeholder="Enter user name" />
-            </div>
+</body>
 
-            <div class="form-group">
-                <label for="password1">Password</label>
-                <input type="password" class="form-control" id="password1" name="password1" placeholder="Enter password" />
-            </div>
-            <div class="form-group">
-                <label for="password2">Password (Confirm)</label>
-                <input type="password" class="form-control" id="password2" name="password2" placeholder="Confirm password" />
-            </div>
-            <br />
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </div>
-</div>
+</html>
