--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -25,7 +25,79 @@
 
             </ul>
         </div>
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="20000">
+                    <div class="circle">
+                        <h3>General Blogging Ideas</h3>
+                        <div class="tip">
+                            <div class="tips">
+                                <p>1.What top things do you wish you'd known when you first started blogging?<br>2.Where do you want your blog or business to be next year? How about in five and ten Years?
+                                    <br>3. Reach out to experts and combine the quotes into a single blog post.<br>4.How do you get blog readers?</p>
+                            </div>
+                            <div>
+                                <p>5.How do you develop your blogging ideas?<br>6.Who are five bloggers who inspire you?
+                                    <br>7. What makes you unique as a blogger?.<br>8. Write a best posts of the season
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                    <div class="circle">
+                        <h3>Ideas to Inspire Your Audience</h3>
+                        <div class="tip">
+                            <div class="tips">
+                                <p>1.What is your mission statement?<br>2. Send out a poll, survey, or quiz filled with questions.
+                                    <br>3.What are the top things you've learned over the past year?
+                                    <br>4. What keeps you creative?</p>
+                            </div>
+                            <div>
+                                <p>5.How do you stay productive?<br>6. If you could change one thing about your life,
+                                    <br> what would it be?
+                                    <br>7. Creative and inspiring quotes related to your industry.
+                                    <br>8. What are you passionate about?
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                    <div class="circle">
+                        <h3>Ideas on Creating Content That Provides Valuable Advice</h3>
+                        <div class="tip">
+                            <div class="tips">
+                                <p>1.Interview an influencer for your blog.<br>2.Answer your readers' questions in blog format.?
+                                    <br>3.What are the best books in your niche that you’d recommend?<br>4. What are the five deadly sins in your career?
+                                </p>
+                            </div>
+                            <div>
+                                <p>5.What are the ten commandments of your career?<br>6.How'd you start your business, blog, or freelance career?
+                                    <br>7. What is the toughest part of being a ______ (your job title)?
+                                    <br>8. What kind of lessons could anyone learn <br> from what you do in your career?
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+
+
+
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+
 </body>
 
 </html>
