--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -1,27 +1,31 @@
 {% extends "base.html" %} {% import "bootstrap/wtf.html" as wtf %} {% block styles %} {{super()}}
-<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}"> {% endblock %}
-<link href="https://fonts.googleapis.com/css2?family=Lora&family=Nunito:wght@200&family=Quicksand&family=Roboto&family=Roboto+Slab:wght@300;400&family=Zen+Antique&display=swap" rel="stylesheet"> {% block content %}
+<link rel="stylesheet" href="{{url_for('static', filename='/style.css')}}"> {% endblock %}
+<link href="https://fonts.googleapis.com/css2?family=Lora&family=Nunito:wght@200&family=Quicksand&family=Roboto&family=Roboto+Slab:wght@300;400&family=Zen+Antique&display=swap" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> {% block content %}
+<div class="container">
+    <div class="navbar">
+        <a href="/dashboard"><span>E!Blog</span></a>
+        <ul class="nav justify-content-end">
 
-<ul class="nav justify-content-end">
-    <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="{{ url_for('auth.dashboard')}}">E!BLOG</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="">PROFILE</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="">LOGOUT</a>
-    </li>
+            <li class="nav-item">
+                <a class=" nav-link " href="# ">profile</a>
+            </li>
+            <li class="nav-item ">
+                <a class="nav-link " href="# ">logout</a>
+            </li>
 
-</ul>
+        </ul>
+    </div>
 
-<div class="container signup text-center">
+    <div class="signup text-center">
 
-    <form class="form-signin" method="POST" action="/pitch">
-        <h4 class="form-signin-heading">Craft Your Blog Here</h4>
-        {{ form.hidden_tag() }} {{ wtf.form_field(form.title) }} {{ wtf.form_field(form.category) }} {{ wtf.form_field(form.content) }}
+        <form class="form-signin" method="POST" action="/blog">
+            <h4 class="form-signin-heading">Craft Your Blog Here</h4>
+            {{ form.hidden_tag() }} {{ wtf.form_field(form.title) }} {{ wtf.form_field(form.category) }} {{ wtf.form_field(form.content) }}
 
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Submit Pitch</button>
-    </form>
+            <button class="btn" type="submit">Submit Blog</button>
+        </form>
+    </div>
+</div>
 
-    {% endblock %}
+{% endblock %}
