--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -17,7 +17,7 @@
             <ul class="nav justify-content-end">
 
                 <li class="nav-item">
-                    <a class=" nav-link " href="# ">profile</a>
+                    <a href="{{url_for('main.profile',uname=current_user.username)}}">Profile </a></li>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link " href="# ">logout</a>
