--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -58,9 +58,9 @@
 
 
         <!--pitches user has posted-->
-        <div class="col-lg-8 col-md-8 col-sm-6">
-            <h3> POSTED BLOGS</h3>
-            <div>
+        <div class="row">
+            <h3>Posted Blogs</h3>
+            <div class="col-lg-8 col-md-8 col-sm-6 ">
                 {% for b in blog %}
                 <p>TITLE: {{b.title}} </p>
                 <p>CATEGORY: {{b.category}}</p>
