--- a/app/static/style.css
+++ b/app/static/style.css
@@ -165,3 +165,13 @@ button {
 .prof p {
     color: white;
 }
+
+.comment input {
+    width: 100%;
+    padding: 0 5px;
+    height: 40px;
+    font-size: 16px;
+    border: 2px solid #F4B101;
+    background: none;
+    /* outline: none; */
+}
