--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -104,18 +104,15 @@
                 <p>Submitted by: {{b.owner.username}}</p>
                 {% endfor %}
             </div>
-
-            <form method="POST">
-                <textarea name="comment" class="form-control"></textarea>
-                <div align="center">
-                    <button type="submit" class=" btn">Comment</button>
-
-                </div>
-            </form>
         </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    </script>
+
+        <form class="form-group mb-3 comment" method="POST" action="/create-comment">
+            <input type="text-area" id="text" name="text" class="form-control" placeholder="Comment on the blog" />
+            <button type="submit" class="btn">Comment</button>
+        </form>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+        </script>
 
 </body>
 
