--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -102,15 +102,16 @@
                 <p>CATEGORY: {{b.category}}</p>
                 <p>BLOG: {{b.content}}</p>
                 <p>Submitted by: {{b.owner.username}}</p>
-                {% endfor %}
+
             </div>
+
         </div>
 
-        <form class="form-group mb-3 comment" method="POST" action="/create-comment">
+        <form class="form-group mb-3 comment" method="POST" action="/create-comment/{{b.id}}">
             <input type="text-area" id="text" name="text" class="form-control" placeholder="Comment on the blog" />
             <button type="submit" class="btn">Comment</button>
         </form>
-
+        {% endfor %}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
         </script>
 
