--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -36,21 +36,20 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active first">
-                    <h3>General Blogging Ideas</h3>
+                    <h3 align-text=center>What is a blog post?</h3>
                     <div class="tip">
                         <div class="tips">
-                            <p>1.What top things do you wish you'd known when you first started blogging?
-                                <br>2.Where do you want your blog or business to be next year? How about in five and ten Years?
-                                <br>3. Reach out to experts and combine the quotes into a single blog post.
-                                <br>4.How do you get blog readers?</p>
+                            <img src="../static/images/aaaa.jpg" width="300" />
                         </div>
-                        <div>
-                            <p>5.How do you develop your blogging ideas?<br>6.Who are five bloggers who inspire you?
-                                <br>7. What makes you unique as a blogger?.<br>8. Write a best posts of the season
-                            </p>
+                        <div class="tipp">
+                            <div class="par">
+                                <p>A blog post is any article, news piece,<br> or guide that's published in the blog section of a website<br>Blog posts allow you and your business to publish insights, thoughts, and stories on your website about any topic.
+                                    <br>They can help you boost brand awareness, credibility, conversions, and revenue.
+                                </p>
+                            </div>
                         </div>
                     </div>
-                    <a href="/blog"><button>Post a Blog</button></a>
+
 
 
 
@@ -59,16 +58,14 @@
                     <h3>Ideas to Inspire Your Audience</h3>
                     <div class="tip">
                         <div class="tips">
-                            <p>1.What is your mission statement?<br>2. Send out a poll, survey, or quiz filled with questions.
-                                <br>3.What are the top things you've learned over the past year?
-                                <br>4. What keeps you creative?</p>
+                            <img src="../static/images/aaaa.jpg" width="300" />
                         </div>
-                        <div>
-                            <p>5.How do you stay productive?<br>6. If you could change one thing about your life,
-                                <br> what would it be?
-                                <br>7. Creative and inspiring quotes related to your industry.
-                                <br>8. What are you passionate about?
-                            </p>
+                        <div class="tipp">
+                            <div class="par">
+                                <p>A blog post is any article, news piece,<br> or guide that's published in the blog section of a website<br>Blog posts allow you and your business to publish insights, thoughts, and stories on your website about any topic.
+                                    <br>They can help you boost brand awareness, credibility, conversions, and revenue.
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -76,15 +73,14 @@
                     <h3>Ideas on Creating Content That Provides Valuable Advice</h3>
                     <div class="tip">
                         <div class="tips">
-                            <p>1.Interview an influencer for your blog.<br>2.Answer your readers' questions in blog format.?
-                                <br>3.What are the best books in your niche that you’d recommend?<br>4. What are the five deadly sins in your career?
-                            </p>
+                            <img src="../static/images/aaaa.jpg" width="300" />
                         </div>
-                        <div>
-                            <p>5.What are the ten commandments of your career?<br>6.How'd you start your business, blog, or freelance career?
-                                <br>7. What is the toughest part of being a ______ (your job title)?
-                                <br>8. What kind of lessons could anyone learn <br> from what you do in your career?
-                            </p>
+                        <div class="tipp">
+                            <div class="par">
+                                <p>A blog post is any article, news piece,<br> or guide that's published in the blog section of a website<br>Blog posts allow you and your business to publish insights, thoughts, and stories on your website about any topic.
+                                    <br>They can help you boost brand awareness, credibility, conversions, and revenue.
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -98,6 +94,7 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+
         <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-6 ">
                 {% for b in blog %}
