--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -13,8 +13,12 @@
 <body>
     <div class="container home">
         <div class="navbar">
-            <span>E!Blog</span>
+            <a href="/dashboard"><span>E!Blog</span></a>
             <ul class="nav justify-content-end">
+
+                <li class="nav-item">
+                    <a class=" nav-link " href="/blogpost ">Blogs</a>
+                </li>
 
                 <li class="nav-item">
                     <a href="{{url_for('main.profile',uname=current_user.username)}}">Profile </a></li>
@@ -96,25 +100,6 @@
         </div>
 
 
-        <div class="row">
-            <div class="col-lg-8 col-md-8 col-sm-6 logs">
-                {% for b in blog %}
-                <p>TITLE: {{b.title}} </p>
-                <p>CATEGORY: {{b.category}}</p>
-                <p>BLOG: {{b.content}}</p>
-                <p>Submitted by: {{b.owner.username}}</p>
-
-            </div>
-
-        </div>
-        <br> {% for comment in comments %}
-        <p>{{comment.remark}}</p> {% endfor %}
-
-        <form class="form-group mb-3 comment" method="POST" action="/create-comment/{{b.id}}">
-            <input type="text-area" id="text" name="text" class="form-control" placeholder="Comment on the blog" />
-            <button type="submit" class="btn">Comment</button>
-        </form>
-        {% endfor %}
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
