--- a/app/templates/profile/update.html
+++ b/app/templates/profile/update.html
@@ -1,15 +1,20 @@
 {% extends "base.html" %} {% import 'bootstrap/wtf.html' as wtf %} {% block styles %} {{super()}}
 <link rel="stylesheet" href="{{url_for('static', filename='/style.css')}}"> {% endblock %}{% block title %}Bio-Update{% endblock %}
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css2?family=Lora&family=Nunito:wght@200&family=Quicksand&family=Roboto&family=Roboto+Slab:wght@300;400&family=Zen+Antique&display=swap" rel="stylesheet"> {% block content %}
 
 
 <div class="container">
     <div class="navbar">
-        <span>E!Blog</span>
+        <a href="/dashboard"><span>E!Blog</span></a>
         <ul class="nav justify-content-end">
 
             <li class="nav-item">
-                <a class=" nav-link " href="# ">profile</a>
+                <a class=" nav-link " href="/blogpost ">Blogs</a>
+            </li>
+
+            <li class="nav-item">
+                <a href="{{url_for('main.profile',uname=current_user.username)}}">Profile </a></li>
             </li>
             <li class="nav-item ">
                 <a class="nav-link " href="# ">logout</a>
