--- a/app/static/style.css
+++ b/app/static/style.css
@@ -162,6 +162,18 @@ strong {
     border-radius: 50%;
 }
 
+.articles {
+    background: rgb(25, 47, 64);
+    background: radial-gradient(circle, rgba(25, 47, 64, 1) 0%, rgba(25, 47, 64, 1) 77%, rgba(244, 177, 1, 1) 85%, rgba(244, 177, 1, 1) 100%);
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    color: white;
+    margin-left: 6rem;
+    margin-bottom: 2rem;
+    text-align: center;
+}
+
 .tipp {
     text-align: center;
     color: #192f40;
