--- a/app/templates/blogpost.html
+++ b/app/templates/blogpost.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="container home">
+    <div class="container">
         <div class="navbar">
             <span>E!Blog</span>
             <ul class="nav justify-content-end">
@@ -25,48 +25,49 @@
 
             </ul>
         </div>
-        <div class="row logs">
 
+        <div class="row articles">
             {% for b in blog %}
-            <div class="col-md-4">
-                <h2>TITLE: {{b.title}} </h2>
-                <h3>CATEGORY: {{b.category}}</h3>
-                <p>BLOG: {{b.content}}</p>
+            <div class="col-md-6">
+                <h3>{{b.title}} </h3>
+                <h5>{{b.category}}</h5>
+                <p>{{b.content}}</p>
                 <small>Submitted by: {{b.owner.username}}</small>
-            </div>
-        </div>
-        <br>
-        <p>
-            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
-                View Comments
-            </button>
-        </p>
-        <div style="min-height: 120px;">
-            <div class="collapse collapse-horizontal" id="collapseWidthExample">
-                <div class="card card-body" style="width: 300px;">
-                    {% for comment in b.comments %}
-                    <div>
-                        <p>{{comment.remark}}</p>
 
-                        <p>Comment by:
-                            <a href="/blogs/{{comment.owner.username}} ">{{comment.owner.username}}</a>
+
+                <br>
+                <p>
+                    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
+                        View Comments
+                    </button>
+                </p>
+                <div style="min-height: 120px;">
+                    <div class="collapse collapse-horizontal" id="collapseWidthExample">
+                        <div class="card card-body" style="width: 300px;">
+                            {% for comment in b.comments %}
+                            <div>
+                                <p>{{comment.remark}}</p>
+
+                                <p>Comment by:
+                                    <a href="/blogs/{{comment.owner.username}} ">{{comment.owner.username}}</a>
+                            </div>
+                            {% endfor %}
+                        </div>
                     </div>
-                    {% endfor %}
                 </div>
+
             </div>
+            <form class="form-group mb-3 comment " method="POST " action="/create-comment/{{b.id}} ">
+                <input type="text-area " id="remark " name="remark " class="form-control " placeholder="Comment on the blog " />
+                <button type="submit " class="btn btn-primary ">Comment</button>
+            </form>
+            {% endfor %}
+
         </div>
-
-
-        <form class="form-group mb-3 comment " method="POST " action="/create-comment/{{b.id}} ">
-            <input type="text-area " id="remark " name="remark " class="form-control " placeholder="Comment on the blog " />
-            <span><button type="submit " class="btn ">Comment</button></span>
-        </form>
-        {% endfor %}
-
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js " integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p " crossorigin="anonymous ">
-        </script>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js " integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p " crossorigin="anonymous ">
+    </script>
+
 </body>
 
 </html>
