--- a/app/static/style.css
+++ b/app/static/style.css
@@ -170,7 +170,7 @@ strong {
     justify-content: center;
     color: white;
     margin-left: 6rem;
-    margin-bottom: 2rem;
+    padding-bottom: 3rem;
     text-align: center;
 }
 
